<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:layout_margin="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/add_layout"
    tools:context=".LoginActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="85dp"
            android:src="@drawable/icon"
            android:layout_gravity="center" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_email_layout"
            app:startIconDrawable="@drawable/ic_baseline_account_box_24"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            app:errorEnabled="true"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:fontFamily="@font/amiko"
                android:id="@+id/emailLog"
                android:layout_width="match_parent"
                android:hint="@string/email_login"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_passwordLog_layout"
            android:layout_gravity="center"
            app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
            android:layout_width="match_parent"
            app:errorEnabled="true"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText
                android:fontFamily="@font/amiko"
                android:id="@+id/passwordLog"
                android:hint="@string/password_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <com.google.android.material.button.MaterialButton
                android:fontFamily="@font/amiko"
                android:textStyle="bold"
                android:id="@+id/btnlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_button"
                android:layout_gravity="center"
                android:background="@drawable/sp_rectangel_root" >
            </com.google.android.material.button.MaterialButton>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">
            <TextView
                android:fontFamily="@font/amiko"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:linksClickable="true"
                android:text="@string/gotoSignup">
            </TextView>

            <TextView
                android:fontFamily="@font/amiko"
                android:id="@+id/registerClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:linksClickable="true"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:text="@string/register_now">
            </TextView>
        </LinearLayout>
    </LinearLayout>







</ScrollView>