...
    <string name="kost_name">Nama Kost</string>
    <string name="kost_address">Alamat Kost</string>
    <string name="add_image">Add Image</string>
    <string name="add_kost">ADD KOST</string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="login_button">Login</string>
    <string name="gotoSignup">Don\'t have account ?      </string>
    <string name="daftar_kamar">DAFTAR KAMAR</string>
    <string name="land_size">Luas Bangunan</string>
    <string name="price">Price</string>
    <string name="save">Save</string>
    <string name="eksklusif">Eksklusif</string>
...
